Added webfonts and icons

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,7 +1,8 @@
 /*--------------------------*\
       Fonts and Spacing
 \*--------------------------*/
-$base-font-family: Helvetica, Arial, sans-serif;
+$base-font-family: 'PT Sans', Helvetica, Arial, sans-serif;
+$base-font-serif: 'Merriweather', "Times New Roman", Times,serif;
 $base-font-size:   16px;
 $small-font-size:  $base-font-size * 0.875;
 $base-line-height: 24px;
