Header work, nav toggle

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -52,4 +52,6 @@
 
   </div>
 
+  <script src="../scripts/vendor/jquery/jquery-1.11.1.js"></script>
+  <script src="../scripts/navigation.js"></script>
 </footer>
