--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,16 +1,53 @@
 <header>
   <div class="layout">
-    <section class="logo">
-      <h1>R</h1>
-      <img src="images/roy.jpg" alt="O" title="Hi :P">
-      <h1>Y</h1>
-      <h2>Hewitt</h2>
-    </section>
-    <section class="msgist">
-      
-    </section>
-    <nav>
-      
+    <div id="top">
+      <a class="logo">
+        <h1>R</h1>
+        <img src="images/roy.jpg" alt="O" title="Hi :P">
+        <h1>Y</h1>
+        <h2>Hewitt</h2>
+      </a>
+
+      <section class="msgist">
+        <a href="http://geospatial.ncsu.edu/education/programs/mgist/" alt="MGIST" title="MGIST">
+          <span>a</span>
+        </a> <!-- north carolina webfont http://propublica.github.io/stateface/ -->
+      </section>
+      <button class="nav-toggle fa fa-bars"></button>
+    </div>
+    
+    <nav class="top-nav">
+      <ul>
+        <li><h2>Geospatial Data Issues</h2>
+          <ul>
+            <li><a href="">Turning Data into Information withArcGIS</a></li>
+            <li><a href="">Conceptualizing Geospatial Problem Solving</a></li>
+            <li><a href="">Geocoding Tabular Data</a></li>
+            <li><a href="">AutoCAD Integration</a></li>
+          </ul>
+        </li>
+        <li><h2>Geospatial Analytics with Vector Data</h2>
+          <ul>
+            <li><a href="">Data Cardinality</a></li>
+            <li><a href="">Working with US Census Data</a></li>
+            <li><a href="">Linear Referencing</a></li>
+            <li><a href="">Spatial Statistics</a></li>
+          </ul>
+        </li>
+        <li><h2>Geospatial Analytics with Raster Data</h2>
+          <ul>
+            <li><a href="">Using Raster Data for Site Selection</a></li>
+            <li><a href="">Suitability Analysis and Weighted Overlay</a></li>
+            <li><a href="">Image Classification</a></li>
+          </ul>
+        </li>
+        <li><h2>Customization</h2>
+          <ul>
+            <li><a href="">Elementary Customization for ArcMap</a></li>
+            <li><a href="">Work on Course Portfolio</a></li>
+          </ul>
+        </li>
+      </ul>
     </nav>
   </div>
 </header>
