--- a/_sass/_fonts.scss
+++ b/_sass/_fonts.scss
@@ -1,2 +1,21 @@
 @import url(http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css);
 @import url(http://fonts.googleapis.com/css?family=PT+Sans|Merriweather);
+
+@font-face {
+  font-family: 'statefaceregular';
+  src: url('fonts/StateFace-Regular-webfont.eot');
+  src: url('../fonts/StateFace-Regular-webfont.eot?#iefix') format('embedded-opentype'),
+       url('../fonts/StateFace-Regular-webfont.woff') format('woff'),
+       url('../fonts/StateFace-Regular-webfont.ttf') format('truetype'),
+       url('../fonts/StateFace-Regular-webfont.svg#statefaceregular') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+
+.propublica-stateface {
+  font-family: StateFaceRegular;
+  font-weight: normal;
+  font-style: normal;
+  // color:white;
+}
