Finished scaffolding course pages

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,9 +1,9 @@
 <header>
   <div class="layout">
     <div id="top">
-      <a class="logo">
+      <a class="logo" href="/">
         <h1>R</h1>
-        <img src="images/roy.jpg" alt="O" title="Hi :P">
+        <img src="{{ site.baseurl }}/images/roy.jpg" alt="O" title="Hi :P">
         <h1>Y</h1>
         <h2>Hewitt</h2>
       </a>
