--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -4,6 +4,7 @@
 $base-font-family: 'PT Sans', Helvetica, Arial, sans-serif;
 $base-font-serif:  'Merriweather', "Times New Roman", Times,serif;
 $stateface:        'statefaceregular';
+
 $base-font-size:   16px;
 $small-font-size:  $base-font-size * 0.875;
 $base-line-height: 24px;
@@ -16,7 +17,7 @@ $spacing-unit:     30px;
 
 $text-color:       white;
 $background-color: #fdfdfd;
-$brand-color:      #2a7ae2;
+$brand-color:      white;
 $logo-color:       white;
 $logo-color-hover: white;
 
