Finished about page, gis520 index

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,6 @@
 <div class="layout">
   <footer>
 
-    <h2>{{ site.title }}</h2>
-
       <ul>
         {% if site.github_username %}
         <li>
@@ -26,7 +24,8 @@
         <li><a href="mailto:{{ site.email }}">royhewitt07@gee-mail.com</a></li>
       </ul>
 
-      <p>{{ site.description }}</p>
+      <p id="subtle-patterns"><a href="http://subtlepatterns.com/cartographer/">Sublet Patterns</a> background</p>
+      <a class="disclaimer" href="{{ site.baseurl }}/about/index.html#opinion-disclaimer">disclaimer</a>
     </div>
 
   </footer>
