--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,6 +16,12 @@
       <button class="nav-toggle fa fa-bars"></button>
     </div>
     
+    <nav class="nav-links">
+      <ul>
+        <a href="{{ site.baseurl }}/about"><li>about</li></a>
+        <a href="{{ site.baseurl }}/gis-520"><li>gis 520</li></a>
+      </ul>
+    </nav>
     <nav class="top-nav">
       <ul>
         <li><h2>Geospatial Data Issues</h2>
