--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -84,15 +84,14 @@ h1, h2, h3, h4, h5, h6 {
  * Links
  */
 a {
-    color: $brand-color;
+    color: $accent-color;
     text-decoration: none;
-
-    &:visited {
-        color: darken($brand-color, 15%);
-    }
+    @include transition-property(all);
+    @include transition-duration(0.3s);
+    @include transition-timing-function(ease-out);
 
     &:hover {
-        color: $text-color;
+        color: $brand-color;
         text-decoration: underline;
     }
 }
