--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -20,6 +20,8 @@ $background-color: #fdfdfd;
 $brand-color:      white;
 $logo-color:       white;
 $logo-color-hover: white;
+$accent-color:     #b10019;
+$nav-links-color:  $accent-color;
 
 $button-color: #C0C0C0;
 $button-color-dark: darken($button-color, 30);
