--- a/_sass/_ncsu-sidebar.scss
+++ b/_sass/_ncsu-sidebar.scss
@@ -6,7 +6,9 @@
 
   h1 {
     margin-top: 1em;
+    font-size: 1.5em;
     text-align: center;
+    color: $accent-color;
   }
 
   h2, h3 {
@@ -20,12 +22,13 @@
 
   a {
     margin-left: 0;
-    @include transition-property(margin-left);
+    @include transition-property(all);
     @include transition-duration(0.3s);
     @include transition-timing-function(ease-out);
 
     &:hover {
       margin-left: 1em;
+      text-decoration: none;
     }//hover
   }//a
 }//sidebar
