--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -8,6 +8,7 @@ $stateface:        'statefaceregular';
 $base-font-size:   16px;
 $small-font-size:  $base-font-size * 0.875;
 $base-line-height: 24px;
+$blockquote-line-height: $base-line-height * 1.5;
 
 $spacing-unit:     30px;
 
