--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,7 @@
     <section class="layout">
       <div class="page-content">
         {{ content }}
+
       </div>
       {% if page.course == "GIS 520: Advanced Geospatial Analytics" %}
 
@@ -18,6 +19,8 @@
       {% endif%}
     </section>
 
+    <div class="last-modified">Last Updated: {% last_modified_at %B %d, %Y %}</div>
+    
     {% include footer.html %}
 
   </body>
