--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -19,11 +19,11 @@
   "base",
   "layout",
   "syntax-highlighting",
-
   "header",
   "ncsu-sidebar",
   "about",
-  "footer"
+  "footer",
+  "gis520"
 ;
 
 .last-modified {
