--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -45,9 +45,5 @@ $large:          70em;
 
 $susy: (
   columns: 10,
-  gutters: 1/4,
-  debug: (
-    image: show,
-    toggle: top right
-  )
+  gutters: 1/4
 );
